testsuite/escript/bug/bug004.err
bug004.src:2:11: error: missing ')' at ';'